--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,45 @@
-JavaScript: true
-Ruby: true
-
+---
+engines:
+  brakeman:
+    enabled: true
+  bundler-audit:
+    enabled: true
+  csslint:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+      - ruby
+      - javascript
+      - python
+      - php
+  eslint:
+    enabled: true
+  fixme:
+    enabled: true
+  rubocop:
+    enabled: true
+ratings:
+  paths:
+  - Gemfile.lock
+  - "**.erb"
+  - "**.haml"
+  - "**.rb"
+  - "**.rhtml"
+  - "**.slim"
+  - "**.css"
+  - "**.inc"
+  - "**.js"
+  - "**.jsx"
+  - "**.module"
+  - "**.php"
+  - "**.py"
 exclude_paths:
-- "react/coverage/"
-- "app/assets/javascripts/bundle.js"
+- config/
+- db/
+- node_modules/
+- spec/
+- vendor/
+- react/coverage/
+- app/assets/javascripts/bundle.js
