--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-preset-react": "^6.5.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-paginate": "^4.4.3",
     "react-router": "^3.0.5",
     "webpack": "^2.6.0"
   }
